# uv-workspaces-management

./: .gitignore  HATCH_SETUP_CONSIDERATIONS.md  MIGRATION_PLAN.md  Makefile  README.md  RUNNING_LOCALLY.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docker/: adder.Dockerfile  lambda.Dockerfile  multiplier.Dockerfile
docs/: RUNNING_LOCALLY.md
lambdas/adder/: pyproject.toml
lambdas/multiplier/: pyproject.toml
src/adder/: .dockerignore  Dockerfile  adder.py  pyproject.toml  test_adder.py
src/lambdas/adder/: main.py
src/lambdas/multiplier/: main.py
src/multiplier/: multiplier.py  pyproject.toml  test_multiplier.py
tests/e2e/: test_workflow.py
tests/lambdas/adder/: test_adder.py
tests/lambdas/multiplier/: test_multiplier.py
workspaces/adder/: Dockerfile  pyproject.toml
workspaces/adder/src/adder/: main.py
workspaces/adder_workspace/: Dockerfile  pyproject.toml
workspaces/adder_workspace/src/adder/: main.py
workspaces/adder_workspace/src/adder/custom/: add.py
workspaces/adder_workspace/tests/: test_adder.py
workspaces/multiplier/: Dockerfile  pyproject.toml
workspaces/multiplier/src/multiplier/: main.py
workspaces/multiplier_workspace/: Dockerfile  pyproject.toml
