# =============================================================================
# PROJECT METADATA
# =============================================================================

[project]
name = "aws-lambdas"
version = "0.1.0"
description = "AWS Lambda Functions Collection"
requires-python = ">=3.12"
dependencies = []  # No shared runtime dependencies


[project.optional-dependencies]
# Dev dependencies for local development only
dev = [
    "basedpyright>=1.34.0",
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]

# Lambda-specific dependencies - each Lambda declares ALL its dependencies explicitly
adder = [
    "aws-lambda-powertools>=3.23.0",
]

multiplier = [
    # Add multiplier-specific dependencies here
]


# =============================================================================
# BUILD SYSTEM
# =============================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lambdas"]


# =============================================================================
# HATCH ENVIRONMENTS - DEFAULT (ALL LAMBDAS)
# =============================================================================

[tool.hatch.envs.default]
installer = "uv"
features = ["adder", "multiplier", "dev"]

[tool.hatch.envs.default.scripts]
# Individual commands for all Lambdas
format = "ruff format src tests"
lint = "ruff check src tests"
typecheck = "basedpyright src tests"
test-only = "pytest"

# Full validation - runs everything (recommended before commit)
test = ["format", "lint", "typecheck", "test-only"]


# =============================================================================
# HATCH ENVIRONMENTS - INDIVIDUAL LAMBDAS
# =============================================================================

[tool.hatch.envs.adder]
installer = "uv"
features = ["adder", "dev"]

[tool.hatch.envs.adder.scripts]
test-only = "pytest tests/lambdas/adder -v"
format = "ruff format src/lambdas/adder tests/lambdas/adder"
lint = "ruff check src/lambdas/adder tests/lambdas/adder"
typecheck = "basedpyright src/lambdas/adder tests/lambdas/adder"
test = ["format", "lint", "typecheck", "test-only"]
build-docker = "docker build -f docker/adder.Dockerfile -t adder-lambda ."


[tool.hatch.envs.multiplier]
installer = "uv"
features = ["multiplier", "dev"]

[tool.hatch.envs.multiplier.scripts]
test-only = "pytest tests/lambdas/multiplier -v"
format = "ruff format src/lambdas/multiplier tests/lambdas/multiplier"
lint = "ruff check src/lambdas/multiplier tests/lambdas/multiplier"
typecheck = "basedpyright src/lambdas/multiplier tests/lambdas/multiplier"
test = ["format", "lint", "typecheck", "test-only"]
build-docker = "docker build -f docker/multiplier.Dockerfile -t multiplier-lambda ."


# =============================================================================
# TOOL CONFIGURATION
# =============================================================================

# Pytest
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


# Ruff - Linter and Formatter
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "N", "ANN"]
ignore = ["ANN401"]  # Allow Any type for Lambda context and similar dynamic types

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# Basedpyright - Type Checker
[tool.basedpyright]
typeCheckingMode = "standard"
reportExplicitAny = false  # Allow Any for Lambda context and dynamic event data
