# =============================================================================
# PROJECT METADATA
# =============================================================================

[project]
name = "aws-lambdas"
version = "0.1.0"
description = "AWS Lambda Functions Collection"
requires-python = ">=3.12"
dependencies = []  # Workspace members don't need to be listed here


[project.optional-dependencies]
# Dev dependencies for local development only
dev = [
    "basedpyright>=1.34.0",
    "httpx>=0.27.0",  # For E2E tests (typed library)
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]


# =============================================================================
# UV WORKSPACE CONFIGURATION
# =============================================================================

[tool.uv.workspace]
members = ["packages/adder", "packages/multiplier"]


# =============================================================================
# TOOL CONFIGURATION
# =============================================================================

# Pytest
[tool.pytest.ini_options]
pythonpath = ["packages"]
testpaths = ["tests"]


# Ruff - Linter and Formatter
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["packages"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "N", "ANN"]
ignore = ["ANN401"]  # Allow Any type for Lambda context and similar dynamic types

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


# Basedpyright - Type Checker
[tool.basedpyright]
typeCheckingMode = "standard"
reportExplicitAny = false  # Allow Any for Lambda context and dynamic event data
extraPaths = ["packages"]
