[project]
name = "adder"
version = "0.1.0"
description = "Adder Lambda"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/adder"]

[tool.pytest.ini_options]
pythonpath = ["src"]
