[project]
name = "multiplier"
version = "0.1.0"
description = "Multiplier Lambda"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/multiplier"]

[tool.pytest.ini_options]
pythonpath = ["src"]